PR/50057: Wolfgang Stukenbrock: yp-map transfer removes SECURE-flag